<resources>
    <string name="app_name">BCA6thSem</string>
    <string name="hello_world">Hello World</string>
    <string name="Loginpage">Login page</string>
    <string name="username">username</string>

    <string name="TextView">Text View</string>

    <string name="login_page">Login Page</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="there_are_many_variations_of_passages">There are many variations of passages</string>
    <string name="email_mobile_number">Email/ Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="join_us">Join Us</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="there_are_many_variations_of_passages_of_lorem_ipsum_available">"There are many variations of passages of Lorem Ipsum available "</string>
    <string name="mobile_Number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_with_the_terms_of_service_privacy_policy"><![CDATA[I agree with the Terms of Service &\nPrivacy Policy.]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="signin">Signin</string>
</resources>